Microservice of collections init
